--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,3 +27,25 @@ jobs:
         env:
           PYTHONPATH: ${{ github.workspace }}
         run: pytest
+
+  smoke:
+    needs: tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run docker smoke tests
+        env:
+          PYTHONPATH: ${{ github.workspace }}
+        run: scripts/run_smoke.sh
