--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "pydantic>=2.6.0",
     "asyncpg>=0.29.0",
     "redis>=5.0.0",
+    "argon2-cffi>=23.1.0",
 ]
 
 [project.optional-dependencies]
@@ -20,4 +21,5 @@ dev = [
     "pytest>=8.0.0",
     "pytest-asyncio>=0.23.0",
     "mypy>=1.8.0",
+    "httpx>=0.27.0",
 ]
